fixed scrolling issue with carousel, fixed branch not showing on emailJS issue and fixed sidenav collapsing text issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 body {
 
 background: whitesmoke;
+overflow-x: hidden;
 }
 header {
     text-align: center;
@@ -74,7 +75,7 @@ header {
     color: rgba(0, 0, 128, 0.623);
 }
 .sidenav {
-    text-align: left;
+  text-align: left;
   height: 100%; 
   width: 0; 
   position: fixed; 
@@ -83,11 +84,16 @@ header {
   left: 0;
   background-color: lightgrey; 
   overflow-x: hidden; 
-  padding-top: 100px; 
+  padding-top: 60px; 
   transition: 0.5s;
 }
 
 /* The navigation menu links */
+
+.hide {
+    display: none !important;
+
+}
 
 .sidenav a {
   padding: 8px 8px 8px 32px;
@@ -218,6 +224,7 @@ color:  rgb(0, 79, 182);
 
 .steps-section {
     border-top: 2px solid navy;
+    height: 500px;
 }
 
 .steps-title {
